Gacha Level, Pause system, Finish and Defeat anim and logic

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -68,7 +68,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/FirstPerson/Blueprints/GameInstance_BP.GameInstance_BP_C
-GameDefaultMap=/Game/FirstPerson/Maps/MainMap_Level.MainMap_Level
+GameDefaultMap=/Game/FirstPerson/Maps/GachaLevel_Level.GachaLevel_Level
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
